New UI and calender functionality

--- a/Pluto/Info.plist
+++ b/Pluto/Info.plist
@@ -61,5 +61,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCalendarsUsageDescription</key>
+	<string>&quot;Pluto needs to access your calendar so you can see your events there!&quot;</string>
 </dict>
 </plist>
