--- a/podfile
+++ b/podfile
@@ -11,6 +11,7 @@ target 'Pluto' do
 	pod 'Firebase/Storage'
 	pod 'Firebase/Database'
     pod 'Firebase/Messaging'
+    pod 'FMMosaicLayout'
     pod 'pop', '~> 1.0'
 end
 
